prepare to deploying